src/modules/security_group/main.tf
resource "aws_security_group" "alb" {
  name        = "${var.service_name}-${terraform.workspace}-alb"
  vpc_id      = "${var.vpc_id}"

  # セキュリティグループ内のリソースからインターネットへのアクセスを許可する
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.service_name}-${terraform.workspace}-alb"
  }
}

resource "aws_security_group_rule" "alb_http" {
  security_group_id = aws_security_group.alb.id
  # セキュリティグループ内のリソースへインターネットからのアクセスを許可する
  type = "ingress"
  from_port = 80
  to_port   = 80
  protocol  = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

# ---------------------------------------------------

resource "aws_security_group" "rds" {
  name        = "${var.service_name}-${terraform.workspace}-rds"
  description = "${terraform.workspace}"
  vpc_id      = "${var.vpc_id}"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.service_name}-${terraform.workspace}-rds"
  }
}

resource "aws_security_group_rule" "aurora" {
  security_group_id = aws_security_group.rds.id
  type = "ingress"

  from_port   = 3306
  to_port     = 3306
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}
